CommandDispatcher should not suppress key-up events.

There are some PPAPI consumers [e.g. chrome remote desktop] that expect to
receive key-up events even if a hotkey was consumed.

Bug: 856692
Change-Id: I8c70709344cfd412d77f8c6ea6d820886b4775ad
Reviewed-on: https://chromium-review.googlesource.com/1129679
Reviewed-by: Nico Weber <thakis@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573788}
Former-commit-id: f2eac7a5a934f5d5da43195ce45469cb309c8a31